plugins {
    id 'java'
}

allprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
}

subprojects {
    ext {
        dockerHubName = "qaguru"
        oauth2AuthorizationServerVersion = '1.1.2'
        lombokVersion = '1.18.34'
        springKafkaVersion = '3.2.2'
        postgresDriverVersion = '42.7.3'
        flywayVersion = '10.17.1'
        springVaultVersion = '4.1.3'
        springGrpcVersion = '3.1.0.RELEASE'
        springGraphqlDateTimeVersion = '6.0.0'
        openApiVersion = '2.6.0'
        jakartaJaxbVersion = '4.0.5'
        wsdl4jVersion = '1.6.3'
        protobufVersion = '3.25.3'
        grpcVersion = '1.63.0'
        thumbnailatorVersion = '0.4.20'
        h2Version = '2.3.232'
        mockitoVersion = '5.12.0'

        dockerImage = System.getProperty("os.arch") == "aarch64" || System.getProperty("os.arch") == "arm64"
                ? "arm64v8/eclipse-temurin:21-jdk"
                : "eclipse-temurin:21-jdk"
        dockerArch = System.getProperty("os.arch") == "aarch64" || System.getProperty("os.arch") == "arm64"
                ? "arm64"
                : "amd64"
    }
}
